--- a/ComputerCookingContest/.classpath
+++ b/ComputerCookingContest/.classpath
@@ -2,7 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="src" path="/jCOLIBRI2"/>
+	<classpathentry kind="lib" path="/RazonadorDeTextos/commons-logging-1.1.3.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jCOLIBRI2"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/OntoBridge"/>
 	<classpathentry kind="lib" path="/jCOLIBRI2/lib/databaseconnector/hsqldb.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
